tests/error/comptime/check_dereference08.bz
// error: invalid memory access of an object of type 'i32'
// note: while evaluating expression at compile time
// note: address is a one-past-the-end pointer into this global object
// error: failed to evaluate expression at compile time
consteval global_arr = [10: i32]();

function test()
{
	(consteval {
		*(&global_arr[0] + 10);
	});
}
